--- a/packages/node-opcua-utils/package.json
+++ b/packages/node-opcua-utils/package.json
@@ -10,13 +10,13 @@
  },
  "dependencies": {
   "node-opcua-assert": "^0.4.0",
-  "underscore": "^1.9.1"
+  "underscore": "^1.9.1",
+  "chalk": "^2.4.1",
  },
  "devDependencies": {
   "@types/chalk": "^2.2.0",
   "@types/node": "^10.5.1",
   "@types/underscore": "^1.8.8",
-  "chalk": "^2.4.1",
   "should": "13.2.1",
   "sinon": "^6.0.1"
  },
